sanitized user data export